--- a/config.toml
+++ b/config.toml
@@ -106,6 +106,34 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     footertext = "We're working on a page for achived projects. We'll link those here when it's ready."
 
 
+
+    [[params.work.row]]
+      category = "publication.png"
+      img = "hostile-logo.png"
+      alt = "hostile priming effect"
+      title = "A Multi-Site Collaborative Study of the Hostile Priming Effect"
+      subtitle = "02/2021 - We find the "hostile priming effect" did not replicate across close (n = 2123) and conceptual (n = 2579) replications"
+      url = "https://www.kpcw.org/post/learn-more-about-your-inner-thermostat-hans-rocha-ijzerman"
+
+
+    [[params.work.row]]
+      category = "announcements.png"
+      img = "kpcw-logo.png"
+      alt = "KPCW"
+      title = "Hans' book featured on kpcw.org"
+      subtitle = "02/2021 - Hans was interviewed on "Heartwarming", his new book on social thermoregulation"
+      url = "https://www.kpcw.org/post/learn-more-about-your-inner-thermostat-hans-rocha-ijzerman"
+
+
+    [[params.work.row]]
+      category = "announcements.png"
+      img = "bbc-logo.png"
+      alt = "BBC sounds"
+      title = "Patrick's research featured on BBC sounds"
+      subtitle = "12/2020 - Patrick was interviewed on the efficiency of training in reducing unconscious bias"
+      url = "https://www.bbc.com/news/education-55309923"
+
+
     [[params.work.row]]
       category = "announcements.png"
       img = "SIPS_logo.jpg"
