--- a/config.toml
+++ b/config.toml
@@ -112,7 +112,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "hostile-logo.png"
       alt = "hostile priming effect"
       title = "A Multi-Site Collaborative Study of the Hostile Priming Effect"
-      subtitle = "02/2021 - We find the 'hostile priming effect' did not replicate across close (n = 2123) and conceptual (n = 2579) replications"
+      subtitle = "02/2021 - We find the 'hostile priming effect' did not replicate across close (n = 2123) and conceptual (n = 2579) replications."
       url = "https://www.kpcw.org/post/learn-more-about-your-inner-thermostat-hans-rocha-ijzerman"
 
 
@@ -121,7 +121,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "kpcw-logo.png"
       alt = "KPCW"
       title = "Hans' book featured on kpcw.org"
-      subtitle = "02/2021 - Hans was interviewed on 'Heartwarming', his new book on social thermoregulation"
+      subtitle = "02/2021 - Hans was interviewed on 'Heartwarming', his new book on social thermoregulation."
       url = "https://www.kpcw.org/post/learn-more-about-your-inner-thermostat-hans-rocha-ijzerman"
 
 
@@ -130,7 +130,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "bbc-logo.png"
       alt = "BBC sounds"
       title = "Patrick's research featured on BBC sounds"
-      subtitle = "12/2020 - Patrick was interviewed on the efficiency of training in reducing unconscious bias"
+      subtitle = "12/2020 - Patrick was interviewed on the efficiency of training in reducing unconscious bias."
       url = "https://www.bbc.com/news/education-55309923"
 
 
@@ -139,7 +139,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "SIPS_logo.jpg"
       alt = "SIPS lab"
       title = "SIPS Commendation for our Lab Philosophy and Research Templates"
-      subtitle = "11/2020 - Our Lab Philosophy and our Research Templates have been awarded with a SIPS Commendation"
+      subtitle = "11/2020 - Our Lab Philosophy and our Research Templates have been awarded with a SIPS Commendation."
       url = "https://twitter.com/improvingpsych/status/1326175174387961861"
       
 
@@ -148,7 +148,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "SIPS.jpg"
       alt = "SIPS blogpost"
       title = "SIPS Commendation for one of our blogpost"
-      subtitle = "11/2020 - Our blogpost 'How open science can advance African psychology: Lessons from the inside' has been awarded with a SIPS Commendation"
+      subtitle = "11/2020 - Our blogpost 'How open science can advance African psychology: Lessons from the inside' has been awarded with a SIPS Commendation."
       url = "https://twitter.com/improvingpsych/status/1325854387726667776"
      
     
