--- a/config.toml
+++ b/config.toml
@@ -120,7 +120,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       category = "announcements.png"
       img = "kpcw-logo.png"
       alt = "KPCW"
-      title = "Hans' book featured on kpcw.org"
+      title = "Heartwarming featured on kpcw.org"
       subtitle = "02/2021 - Hans was interviewed on 'Heartwarming', his new book on social thermoregulation."
       url = "https://www.kpcw.org/post/learn-more-about-your-inner-thermostat-hans-rocha-ijzerman"
 
