--- a/config.toml
+++ b/config.toml
@@ -108,6 +108,30 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [[params.work.row]]
       category = "announcements.png"
+      img = "SPSP.jpeg"
+      alt = "SPSP"
+      title = "SPSP Presentation"
+      subtitle = "02/2021 - Patrick Forscher is hosting an SPSP free-form Friday!."
+      url = "https://i.imgur.com/Zv0wb90.png"
+
+    [[params.work.row]]
+      category = "announcements.png"
+      img = "DeVolkskrant.png"
+      alt = "DeVolkskrant 2"
+      title = "Hans IJzerman's expertise called"
+      subtitle = "02/2021 - IJzerman served as a fact checker for science news in Dutch newspaper De Volkskrant."
+      url = "https://i.imgur.com/k1yDoOo.png"
+
+    [[params.work.row]]
+      category = "announcements.png"
+      img = "DeVolkskrant.png"
+      alt = "DeVolkskrant 1"
+      title = "Hans IJzerman's research featured on De Volkskrant"
+      subtitle = "02/2021 - IJzerman et al.’s NHB paper was covered in Dutch newspaper De Volkskrant."
+      url = "https://i.imgur.com/fVO4rWK.png"
+
+    [[params.work.row]]
+      category = "announcements.png"
       img = "heartwarming.jpeg"
       alt = "Heartwarming"
       title = "Heartwarming featured on nextbigidea"
