--- a/config.toml
+++ b/config.toml
@@ -413,6 +413,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "ronan.png"
     alt = "Ronan Bellemin"
     social = ["icon-globe"]
+
+    [[params.about.item]]
+    name = '<a href="">Anthony Dall’agnola-Bombier</a>'
+    position = "Developer"
+    description = "Anthony Dall’agnola-Bombier is subcontracted by the CORE lab for app development."
+    img = "anthony.png"
+    alt = "Anthony Dall’agnola-Bombier"
+    social = ["icon-globe"]
   
   
   # Testimonials section
