--- a/config.toml
+++ b/config.toml
@@ -142,7 +142,15 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "socialthermoregulation.png"
       alt = "social thermoregulation"
       title = "Popular science article on social thermoregulation"
-      subtitle = "03/2021 - Hans published a popular science article on social thermoregulation in 'Psychology Today'"
+      subtitle = "03/2021 - Hans published an article on social thermoregulation, in 'Psychology Today'"
+      url = "https://www.in-mind.org/blog/post/how-to-bring-the-gezelligheid-this-pandemic-winter-into-your-home-0"
+
+      [[params.work.row]]
+      category = "announcements.png"
+      img = "practical.png"
+      alt = "practical"
+      title = "On the translation of science to practical advice"
+      subtitle = "02/2021 - Hans & Patrick published an article on the difficulty experienced by Science to provide practical advice, in 'The Inquisitive Mind'"
       url = "https://www.in-mind.org/blog/post/how-to-bring-the-gezelligheid-this-pandemic-winter-into-your-home-0"
 
     [[params.work.row]]
@@ -150,7 +158,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "gezelligheid.jpg"
       alt = "gezelligheid"
       title = "Popular science article on social thermoregulation"
-      subtitle = "02/2021 - Hans & Olivier published a popular science article on social thermoregulation in 'The Inquisitive Mind'"
+      subtitle = "02/2021 - Hans & Olivier published an article on social thermoregulation, in 'The Inquisitive Mind'"
       url = "https://www.in-mind.org/blog/post/how-to-bring-the-gezelligheid-this-pandemic-winter-into-your-home-0"
 
     [[params.work.row]]
