--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [[params.work.row]]
     category = "announcements.png"
+    img = "labphilosophy.png"
+    alt = "lab philosophy"
+    title = "Media coverage of our lab philosophy"
+    subtitle = "05/2021 - Our lab philosophy has been covered on the University newspaper of Free University, Amsterdam."
+    url = "https://www.advalvas.vu.nl/verhalen/weg-met-die-zelfingenomenheid-praat-over-je-fouten"
+
+    [[params.work.row]]
+    category = "announcements.png"
     img = "osf.png"
     alt = "KLI workshop"
     title = "KLI Exploratory Data Analysis workshop"
