--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     [[params.work.row]]
     category = "announcements.png"
+    img = "radiolab.png"
+    alt = "radiolab"
+    title = "Heartwarming featured on Radiolab"
+    subtitle = "05/2021 - Hans Rocha IJzerman’s book Heartwarming was featured in a recent Radiolab episode!"
+    url = "https://www.advalvas.vu.nl/verhalen/weg-met-die-zelfingenomenheid-praat-over-je-fouten"
+
+    [[params.work.row]]
+    category = "announcements.png"
     img = "labphilosophy.png"
     alt = "lab philosophy"
     title = "Media coverage of our lab philosophy"
