--- a/config.toml
+++ b/config.toml
@@ -150,7 +150,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "osf.png"
     alt = "ISCTE-IUL"
     title = "Registered Reports workshop"
-    subtitle = "03/2021 - Patrick Forscher taught a workshop on Registered Reports at ISCTE-IUL."
+    subtitle = "03/2021 - Patrick Forscher taught a workshop on Registered Reports for the Lisbon University Institute."
     url = "https://osf.io/m9bzh/"
 
     [[params.work.row]]
@@ -158,7 +158,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "pillowtalk_core.png"
     alt = "Heartwarming"
     title = "Heartwarming featured on Pillowtalk"
-    subtitle = "03/2021 - Hans IJzerman talked about his book Heartwarming in the online show Pillowtalk."
+    subtitle = "03/2021 - Hans IJzerman talked about his new book Heartwarming in the online show Pillowtalk."
     url = "https://i.imgur.com/ZpX2kGK.png"
 
     [[params.work.row]]
@@ -166,7 +166,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "socialthermoregulation.png"
       alt = "social thermoregulation"
       title = "Popular science article on social thermoregulation"
-      subtitle = "03/2021 - Hans published an article on social thermoregulation, in 'Psychology Today'"
+      subtitle = "03/2021 - Hans published a popular science article on social thermoregulation, in 'Psychology Today'."
       url = "https://www.in-mind.org/blog/post/how-to-bring-the-gezelligheid-this-pandemic-winter-into-your-home-0"
 
     [[params.work.row]]
@@ -174,7 +174,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "practical.png"
     alt = "practical"
     title = "On the translation of science to practical advice"
-    subtitle = "02/2021 - Hans & Patrick published an article on the difficulty experienced by Science to provide practical advice, in 'The Inquisitive Mind'"
+    subtitle = "02/2021 - Hans & Patrick published an article on the difficulty experienced by Science to provide practical advice, in 'The Inquisitive Mind'."
     url = "https://www.in-mind.org/blog/post/how-to-bring-the-gezelligheid-this-pandemic-winter-into-your-home-0"
 
     [[params.work.row]]
@@ -190,7 +190,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "gezelligheid.jpg"
       alt = "gezelligheid"
       title = "Popular science article on social thermoregulation"
-      subtitle = "02/2021 - Hans & Olivier published an article on social thermoregulation, in 'The Inquisitive Mind'"
+      subtitle = "02/2021 - Hans & Olivier published an article on social thermoregulation, in 'The Inquisitive Mind'."
       url = "https://www.in-mind.org/blog/post/how-to-bring-the-gezelligheid-this-pandemic-winter-into-your-home-0"
 
     [[params.work.row]]
