--- a/config.toml
+++ b/config.toml
@@ -205,15 +205,15 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       category = "announcements.png"
       img = "DeVolkskrant.png"
       alt = "DeVolkskrant 2"
-      title = "IJzerman’s expertise called upon"
-      subtitle = "02/2021 - IJzerman served as a fact checker for science news in the Dutch newspaper 'De Volkskrant'."
+      title = "Hans’ expertise called upon"
+      subtitle = "02/2021 - Hans served as a fact checker for science news in the Dutch newspaper 'De Volkskrant'."
       url = "https://i.imgur.com/k1yDoOo.png"
 
     [[params.work.row]]
       category = "announcements.png"
       img = "DeVolkskrant.png"
       alt = "DeVolkskrant 1"
-      title = "Hans' paper featured on De Volkskrant"
+      title = "NHB paper featured on De Volkskrant"
       subtitle = "02/2021 - IJzerman et al.’s Nature Human Behaviour paper was covered in the Dutch newspaper 'De Volkskrant'."
       url = "https://i.imgur.com/fVO4rWK.png"
 
