--- a/config.toml
+++ b/config.toml
@@ -467,12 +467,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   [[params.about.item]]
     name = '<a href="bastien.paris@etu.univ-grenoble-alpes.fr">Bastien Paris</a>'
     position = "MA Student"
-    description = "BA in psychology at UGA. Joins the lab for his MA, and will work on loneliness trends across time."
+    description = "BA in psychology at Université de Bourgogne. Joins the lab for his MA, and will work on loneliness trends across time."
     img = "bastien.png"
     alt = "Bastien Paris"
     social = [
-      ["icon-github", "https://github.com/parisbastien"],
-      ["icon-twitter", "https://twitter.com/l3astienParis"]
+      ["icon-globe", "https://www.researchgate.net/profile/Bastien-Paris"],
+      ["icon-folder", "https://osf.io/profile/cj3u5"],
+      ["icon-twitter", "https://twitter.com/l3astienParis"],
+      ["icon-github", "https://github.com/parisbastien"]
     ]
 
   [[params.about.item]]
@@ -481,7 +483,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     description = "BA in psychology at UGA. Joins the lab for her MA, and will work on the measurement instruments of romantic relationship quality."
     img = "blandine.png"
     alt = "Blandine Ribotta"
-    social = ["icon-globe"]
+    social = [
+        ["icon-globe", ""]
+        ]
 
   [[params.about.item]]
     name = '<a href="ronan.bellemin@etu.univ-grenoble-alpes.fr">Ronan Bellemin</a>'
@@ -489,7 +493,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     description = "BA in psychology at UGA. Joins the lab for his MA, and will work on the relationships between temperature and sexual/dating behavior."
     img = "ronan.png"
     alt = "Ronan Bellemin"
-    social = ["icon-globe"]
+    social = [
+        ["icon-globe", ""]
+        ]
 
     [[params.about.item]]
     name = '<a href="">Anthony Dall’agnola-Bombier</a>'
@@ -497,7 +503,55 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     description = "Anthony Dall’agnola-Bombier is subcontracted by the CORE lab for app development."
     img = "anthony.png"
     alt = "Anthony Dall’agnola-Bombier"
-    social = ["icon-globe"]
+    social = [
+        ["icon-globe", ""]
+        ]
+
+    [[params.about.item]]
+    name = '<a href="">Adar Cem Lagap</a>'
+    position = "Intern"
+    description = "BA in Psychology, joins the lab as an intern and studying on close relationships and dynamics."
+    img = "adar.jpeg"
+    alt = "Adar Cem Lagap"
+    social = [
+        ["icon-globe", "https://www.researchgate.net/profile/Adar-Lagap"],
+        ["icon-folder", "https://osf.io/"],
+        ["icon-twitter", "https://twitter.com/CemLagap"]
+        ]
+
+    [[params.about.item]]
+    name = '<a href="">Miguel Silan</a>'
+    position = "PhD Student"
+    description = "MA in Psychology from the University of the Philippines Diliman. Joins the lab for his PhD, and will work on the conceptualization and measurement of relationship quality."
+    img = "miguel.jpeg"
+    alt = "Miguel Silan"
+    social = [
+        ["icon-folder", "https://orcid.org/0000-0002-7480-3661"],
+        ["icon-twitter", "https://twitter.com/MetaMethodsPH"],
+        ["icon-google", "https://scholar.google.com/citations?user=JAA8K7UAAAAJ&hl=en&oi=ao"]
+        ]
+
+    [[params.about.item]]
+    name = '<a href="">Miguel Silan</a>'
+    position = "PhD Student"
+    description = "MA in Psychology from the University of the Philippines Diliman. Joins the lab for his PhD, and will work on the conceptualization and measurement of relationship quality."
+    img = "miguel.jpeg"
+    alt = "Miguel Silan"
+    social = [
+        ["icon-folder", "https://orcid.org/0000-0002-7480-3661"],
+        ["icon-twitter", "https://twitter.com/MetaMethodsPH"],
+        ["icon-google", "https://scholar.google.com/citations?user=JAA8K7UAAAAJ&hl=en&oi=ao"]
+        ]
+
+    [[params.about.item]]
+    name = '<a href="">Annabelle Narsama</a>'
+    position = "MA Student"
+    description = "BA in psychology at Paul-Valéry Montpellier 3 University. Joins the lab for her MA, and will work on men’s sexual behaviors."
+    img = "annabelle.png"
+    alt = "Annabelle Narsama"
+    social = [
+        ["icon-globe", ""]
+        ]
   
   
   # Testimonials section
